<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today, June 24</string>
    <string name="twentyone">21*</string>
    <string name="eight">8*</string>
    <string name="action_refresh1" translatable="false">Refresh</string>
    <string name="enterPostalCodeArea">Enter the postal code here</string>
    <string name="title_activity_detail">View in Detail</string>
    <string name="hello_world">Hello World</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="choose_location">Choose location></string>
    <string name="metric_selection">Choose metric selection</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">48084</string>
    <string name="defaultUnit">metric</string>
    <string name="unit1">unknown1</string>
    <string name="unit2">unknown2</string>
    <string name="temperature">temperature</string>
    <string name="maps">Open in Maps</string>
    <string name="mapview">View in maps</string>
    <string name="share_action">Share</string>
</resources>
