<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:persistent="true"
        android:singleLine="true" />

    <ListPreference
        android:title="Temperature"
        android:key="@string/temperature"
        android:summary="Second List Prefernce Summary"
        android:defaultValue="@string/defaultUnit"
        android:entries="@array/tempEntries"
        android:entryValues="@array/tempValues"/>

</PreferenceScreen>